--- a/style.css
+++ b/style.css
@@ -47,9 +47,10 @@ html, body{
 }
 
 .btn{
-  padding: 5px 10px;
+  padding: 10px 15px;
   border-radius: 10px;
   transition: all .2s;
+  cursor: pointer;
   &:hover{
     box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.5);
     background-color:rgba(0, 250, 154, 0.2);
@@ -65,12 +66,36 @@ html, body{
 }
 .thin-line{
   display: flex;
-  gap: 10px;
+  flex-direction: column;
+  gap: 5px;
   align-items: center;
   transition: all .3s;
+  margin-bottom: 5px;
   &:hover {
     transform: scale(1.5);
   }
+  &:hover > input{
+    cursor: pointer;
+  }
+}
+/* .thin-line > input{
+  width: 300px;
+} */
+datalist {
+  display: flex;
+  /* flex-direction: column; */
+  justify-content: space-between;
+  /* writing-mode: vertical-lr; */
+  width: 300px;
+}
+
+option {
+  padding: 0;
+}
+
+input[type="range"] {
+  width: 300px;
+  margin: 0;
 }
 .colors {
   display: flex;
@@ -82,8 +107,12 @@ html, body{
   height: 70px;
   border-radius: 15%;
   transition: all .3s;
+  border: 1px solid inherit;
   box-shadow: 3px 3px 10px rgba(0, 0, 0, 0.5);
+  cursor: pointer;
   &:hover{
     transform: scale(1.1);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.9);
+
   }
 }
